changed pulse description

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                          <img src="http://i.stack.imgur.com/SBv4T.gif" alt="this slowpoke moves" width=80 />
                     </li> -->
                     <li>
-                         <a class="btn-floating cyan pulse btn tooltipped" data-position="bottom" data-tooltip="To copy the code click on respective code icon.""><i class="material-icons">error_outline</i></a>
+                         <a class="btn-floating cyan pulse btn tooltipped" data-position="bottom" data-tooltip="To copy the code click on respective copy icon.""><i class="material-icons">error_outline</i></a>
                     </li>
                </ul>
           </div>
